--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>MSOS project website<title>
-  </head>
-  <body>
-   
-  </body>
+<head>    
+    <title>MSOS project website</title>
+    <meta http-equiv="refresh" content="0; url=./site/public/index.html" />
+</head> 
+<body>
+
+    <p>If you are not redirected automatically please use link <a href="./site/public/index.html">Redirect</a></p>
+
+</body>
 </html>
